<resources>
    <string name="app_name">Shopping</string>
    <string name="ename">Name</string>
    <string name="eemail">Email</string>
    <string name="epassword">Password</string>
    <string name="eConfirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Already have an account?</string>
    <string name="intro">Here\'s \nyour first \nstep with \nus!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginb">Login</string>
    <string name="registert">New user? Register Now</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="uaddress">A/1, Android Street, NYC</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_acInfo">Account</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_signout">Sign Out</string>
    <string name="homeb">Back To Home</string>
    <string name="address">Address</string>
    <string name="mobilenum">1111111111</string>
    <string name="mobile">Mobile</string>
    <string name="uname">Dk</string>
    <string name="acInfo">Account Info</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price 10</string>
    <string name="remove">Remove</string>
    <string name="order">Order</string>
    <string name="hi">HI</string>
    <string name="YourAddedItem">Your Added Item</string>
    <string name="price_format">Price: ₹%.2f</string>


</resources>