<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userInfo.UserInfoFragment"
    android:background="@color/gold">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="135dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="568dp"
        android:layout_marginEnd="155dp"
        android:backgroundTint="@color/blood_red"
        android:text="@string/homeb"
        android:textColor="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/umobileUIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="50dp"
        android:text="@string/mobilenum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uaddressUIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="50dp"
        android:text="@string/uaddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameUIP"
        style="@style/CustomTextViewStyle"
        android:layout_marginStart="122dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="50dp"
        android:text="@string/ename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unameUIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="50dp"
        android:text="@string/uname"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uemailUIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="50dp"
        android:text="user@gmail.com"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailUIP"
        style="@style/CustomTextViewStyle"
        android:layout_marginStart="122dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="50dp"
        android:text="@string/eemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addImgUIP"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="476dp"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toStartOf="@+id/uaddressUIP"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_mail"
        app:layout_constraintEnd_toStartOf="@+id/uemailUIP"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobileUIP"
        style="@style/CustomTextViewStyle"
        android:layout_marginStart="122dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="50dp"
        android:text="@string/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="300dp"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toStartOf="@+id/unameUIP"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acInfoUIP"
        style="@style/CustomTextViewStyle"
        android:layout_marginStart="122dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="50dp"
        android:text="@string/acInfo"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressUIP"
        style="@style/CustomTextViewStyle"
        android:layout_width="62dp"
        android:layout_height="25dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="50dp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="356dp"
        android:src="@drawable/ic_mobile"
        app:layout_constraintEnd_toStartOf="@+id/umobileUIP"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>