<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_final"
    tools:context=".MainActivity"
    android:id="@+id/mainPage">

    <ImageView
        android:id="@+id/team"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/team" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="125dp"
        android:layout_height="157dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/intro"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="420dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="260dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiname"
                android:layout_width="366dp"
                android:layout_height="71dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="20dp"
                app:helperText=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ename"
                    android:inputType="text"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackoff"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiemail"
                android:layout_width="365dp"
                android:layout_height="72dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/eemail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackoff"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tipass"
                android:layout_width="366dp"
                android:layout_height="73dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="180dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/epassword"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackoff"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ticpass"
                android:layout_width="361dp"
                android:layout_height="72dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="260dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/confirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/eConfirmPassword"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blackoff"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="128dp"
                android:layout_marginTop="338dp"
                android:backgroundTint="@color/lightviolet"
                android:text="@string/register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="104dp"
                android:layout_marginTop="392dp"
                android:text="@string/login"
                android:textColor="@color/background_final"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
